k8s-deploy/k8s/scanner-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: triangle-scanner
  namespace: npe-learner
  labels:
    app: triangle-scanner
spec:
  selector:
    matchLabels:
      app: triangle-scanner
  template:
    metadata:
      labels:
        app: triangle-scanner
    spec:
      serviceAccountName: triangle-scanner-sa
      containers:
        - name: scanner
          image: triangle-scanner:v3
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: host-tmp
              mountPath: /host-fs
          resources:
            requests:
              memory: "32Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "200m"
      volumes:
        - name: host-tmp
          hostPath:
            path: /tmp
            type: DirectoryOrCreate
