k8s-deploy/k8s/security-hub.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: security-hub
  namespace: npe-learner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: security-hub
  template:
    metadata:
      labels:
        app: security-hub
    spec:
      containers:
        - name: security-hub
          image: triangle-security-hub:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3001
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: security-hub-service
  namespace: npe-learner
spec:
  type: NodePort
  selector:
    app: security-hub
  ports:
    - port: 3001
      targetPort: 3001
      nodePort: 30091
